; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/liquidio/base/extr_lio_droq.c_lio_create_recv_info.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/liquidio/base/extr_lio_droq.c_lio_create_recv_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lio_recv_info = type { %struct.lio_recv_pkt* }
%struct.lio_recv_pkt = type { i64, i64*, i32**, i8*, i8*, i32 }
%struct.octeon_device = type { i64 }
%struct.lio_droq = type { i64, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32*, i64 }
%struct.lio_droq_info = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.lio_recv_info* (%struct.octeon_device*, %struct.lio_droq*, i64, i64)* @lio_create_recv_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.lio_recv_info* @lio_create_recv_info(%struct.octeon_device* %0, %struct.lio_droq* %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.lio_recv_info*, align 8
  %6 = alloca %struct.octeon_device*, align 8
  %7 = alloca %struct.lio_droq*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.lio_droq_info*, align 8
  %11 = alloca %struct.lio_recv_pkt*, align 8
  %12 = alloca %struct.lio_recv_info*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  store %struct.octeon_device* %0, %struct.octeon_device** %6, align 8
  store %struct.lio_droq* %1, %struct.lio_droq** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %15 = load %struct.lio_droq*, %struct.lio_droq** %7, align 8
  %16 = getelementptr inbounds %struct.lio_droq, %struct.lio_droq* %15, i32 0, i32 2
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = load i64, i64* %9, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %18
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = inttoptr i64 %21 to %struct.lio_droq_info*
  store %struct.lio_droq_info* %22, %struct.lio_droq_info** %10, align 8
  %23 = call %struct.lio_recv_info* @lio_alloc_recv_info(i32 4)
  store %struct.lio_recv_info* %23, %struct.lio_recv_info** %12, align 8
  %24 = load %struct.lio_recv_info*, %struct.lio_recv_info** %12, align 8
  %25 = icmp eq %struct.lio_recv_info* %24, null
  br i1 %25, label %26, label %27

26:                                               ; preds = %4
  store %struct.lio_recv_info* null, %struct.lio_recv_info** %5, align 8
  br label %110

27:                                               ; preds = %4
  %28 = load %struct.lio_recv_info*, %struct.lio_recv_info** %12, align 8
  %29 = getelementptr inbounds %struct.lio_recv_info, %struct.lio_recv_info* %28, i32 0, i32 0
  %30 = load %struct.lio_recv_pkt*, %struct.lio_recv_pkt** %29, align 8
  store %struct.lio_recv_pkt* %30, %struct.lio_recv_pkt** %11, align 8
  %31 = load %struct.lio_droq_info*, %struct.lio_droq_info** %10, align 8
  %32 = getelementptr inbounds %struct.lio_droq_info, %struct.lio_droq_info* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.lio_recv_pkt*, %struct.lio_recv_pkt** %11, align 8
  %35 = getelementptr inbounds %struct.lio_recv_pkt, %struct.lio_recv_pkt* %34, i32 0, i32 5
  store i32 %33, i32* %35, align 8
  %36 = load %struct.lio_droq_info*, %struct.lio_droq_info** %10, align 8
  %37 = getelementptr inbounds %struct.lio_droq_info, %struct.lio_droq_info* %36, i32 0, i32 0
  %38 = load i64, i64* %37, align 8
  %39 = load %struct.lio_recv_pkt*, %struct.lio_recv_pkt** %11, align 8
  %40 = getelementptr inbounds %struct.lio_recv_pkt, %struct.lio_recv_pkt* %39, i32 0, i32 0
  store i64 %38, i64* %40, align 8
  %41 = load i64, i64* %8, align 8
  %42 = inttoptr i64 %41 to i8*
  %43 = load %struct.lio_recv_pkt*, %struct.lio_recv_pkt** %11, align 8
  %44 = getelementptr inbounds %struct.lio_recv_pkt, %struct.lio_recv_pkt* %43, i32 0, i32 4
  store i8* %42, i8** %44, align 8
  %45 = load %struct.octeon_device*, %struct.octeon_device** %6, align 8
  %46 = getelementptr inbounds %struct.octeon_device, %struct.octeon_device* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = inttoptr i64 %47 to i8*
  %49 = load %struct.lio_recv_pkt*, %struct.lio_recv_pkt** %11, align 8
  %50 = getelementptr inbounds %struct.lio_recv_pkt, %struct.lio_recv_pkt* %49, i32 0, i32 3
  store i8* %48, i8** %50, align 8
  store i64 0, i64* %14, align 8
  %51 = load %struct.lio_droq_info*, %struct.lio_droq_info** %10, align 8
  %52 = getelementptr inbounds %struct.lio_droq_info, %struct.lio_droq_info* %51, i32 0, i32 0
  %53 = load i64, i64* %52, align 8
  store i64 %53, i64* %13, align 8
  br label %54

54:                                               ; preds = %69, %27
  %55 = load i64, i64* %8, align 8
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %108

57:                                               ; preds = %54
  %58 = load i64, i64* %13, align 8
  %59 = load %struct.lio_droq*, %struct.lio_droq** %7, align 8
  %60 = getelementptr inbounds %struct.lio_droq, %struct.lio_droq* %59, i32 0, i32 0
  %61 = load i64, i64* %60, align 8
  %62 = icmp uge i64 %58, %61
  br i1 %62, label %63, label %67

63:                                               ; preds = %57
  %64 = load %struct.lio_droq*, %struct.lio_droq** %7, align 8
  %65 = getelementptr inbounds %struct.lio_droq, %struct.lio_droq* %64, i32 0, i32 0
  %66 = load i64, i64* %65, align 8
  br label %69

67:                                               ; preds = %57
  %68 = load i64, i64* %13, align 8
  br label %69

69:                                               ; preds = %67, %63
  %70 = phi i64 [ %66, %63 ], [ %68, %67 ]
  %71 = load %struct.lio_recv_pkt*, %struct.lio_recv_pkt** %11, align 8
  %72 = getelementptr inbounds %struct.lio_recv_pkt, %struct.lio_recv_pkt* %71, i32 0, i32 1
  %73 = load i64*, i64** %72, align 8
  %74 = load i64, i64* %14, align 8
  %75 = getelementptr inbounds i64, i64* %73, i64 %74
  store i64 %70, i64* %75, align 8
  %76 = load %struct.lio_droq*, %struct.lio_droq** %7, align 8
  %77 = getelementptr inbounds %struct.lio_droq, %struct.lio_droq* %76, i32 0, i32 2
  %78 = load %struct.TYPE_2__*, %struct.TYPE_2__** %77, align 8
  %79 = load i64, i64* %9, align 8
  %80 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %78, i64 %79
  %81 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %80, i32 0, i32 0
  %82 = load i32*, i32** %81, align 8
  %83 = load %struct.lio_recv_pkt*, %struct.lio_recv_pkt** %11, align 8
  %84 = getelementptr inbounds %struct.lio_recv_pkt, %struct.lio_recv_pkt* %83, i32 0, i32 2
  %85 = load i32**, i32*** %84, align 8
  %86 = load i64, i64* %14, align 8
  %87 = getelementptr inbounds i32*, i32** %85, i64 %86
  store i32* %82, i32** %87, align 8
  %88 = load %struct.lio_droq*, %struct.lio_droq** %7, align 8
  %89 = getelementptr inbounds %struct.lio_droq, %struct.lio_droq* %88, i32 0, i32 2
  %90 = load %struct.TYPE_2__*, %struct.TYPE_2__** %89, align 8
  %91 = load i64, i64* %9, align 8
  %92 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %90, i64 %91
  %93 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %92, i32 0, i32 0
  store i32* null, i32** %93, align 8
  %94 = load i64, i64* %9, align 8
  %95 = load %struct.lio_droq*, %struct.lio_droq** %7, align 8
  %96 = getelementptr inbounds %struct.lio_droq, %struct.lio_droq* %95, i32 0, i32 1
  %97 = load i32, i32* %96, align 8
  %98 = call i64 @lio_incr_index(i64 %94, i32 1, i32 %97)
  store i64 %98, i64* %9, align 8
  %99 = load %struct.lio_droq*, %struct.lio_droq** %7, align 8
  %100 = getelementptr inbounds %struct.lio_droq, %struct.lio_droq* %99, i32 0, i32 0
  %101 = load i64, i64* %100, align 8
  %102 = load i64, i64* %13, align 8
  %103 = sub i64 %102, %101
  store i64 %103, i64* %13, align 8
  %104 = load i64, i64* %14, align 8
  %105 = add i64 %104, 1
  store i64 %105, i64* %14, align 8
  %106 = load i64, i64* %8, align 8
  %107 = add i64 %106, -1
  store i64 %107, i64* %8, align 8
  br label %54

108:                                              ; preds = %54
  %109 = load %struct.lio_recv_info*, %struct.lio_recv_info** %12, align 8
  store %struct.lio_recv_info* %109, %struct.lio_recv_info** %5, align 8
  br label %110

110:                                              ; preds = %108, %26
  %111 = load %struct.lio_recv_info*, %struct.lio_recv_info** %5, align 8
  ret %struct.lio_recv_info* %111
}

declare dso_local %struct.lio_recv_info* @lio_alloc_recv_info(i32) #1

declare dso_local i64 @lio_incr_index(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
